--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-router": "^5.1.2",
+    "@material-ui/icons": "^4.4.3",
+    "react-scripts": "3.2.0",
+    "@material-ui/styles": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
