--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "latest",
+    "material-ui-dropzone": "^2.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-router-dom": "^5.1.2",
     "react-router": "^5.1.2",
-    "@material-ui/icons": "^4.4.3",
-    "react-scripts": "3.2.0",
-    "@material-ui/styles": "latest"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
