--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "latest",
+    "axios": "^0.19.0",
     "material-ui-dropzone": "^2.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "axios": "^0.19.0"
+    "save-as-file": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
